--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@ THE SOFTWARE.
   </licenses>
     
   <properties>
-    <revision>2.5</revision>
+    <revision>2.5-OBJ</revision>
     <changelist>-SNAPSHOT</changelist>
     <jenkins.version>2.222.4</jenkins.version>
     <java.level>8</java.level>
