[DEVOPS-2089] Ajustes no pom.xml para enforcer não quebrar o build

--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,27 @@ THE SOFTWARE.
     <tag>${scmTag}</tag>
   </scm>
 
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-enforcer-plugin</artifactId>
+                    <version>3.0.0</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <configuration>
+                    <fail>false</fail>
+                    <failFast>false</failFast>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <pluginRepositories>
         <pluginRepository>
